--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=eureka-client
 server.port=1111
 eureka.client.serviceUrl.defaultZone=http://localhost:1110/eureka/
+
+#开启actuator的所有端
+management.endpoints.web.exposure.include=*
