--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -14,3 +14,6 @@ eureka.client.fetch-registry=false
 
 #服务注册中心的配置内容，指定服务注册中心的位置
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+
+#开启actuator的所有端
+management.endpoints.web.exposure.include=*
