--- a/ribbon-consumer/src/main/resources/application.properties
+++ b/ribbon-consumer/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=ribbon-consumer
 server.port=1112
 eureka.client.serviceUrl.defaultZone=http://localhost:1110/eureka/
+
+#开启actuator的所有端
+management.endpoints.web.exposure.include=*
