--- a/ribbon-consumer/src/main/resources/application.properties
+++ b/ribbon-consumer/src/main/resources/application.properties
@@ -4,3 +4,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:1110/eureka/
 
 #开启actuator的所有端
 management.endpoints.web.exposure.include=*
+
+logging.level.root=info
