--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=config-server
 server.port=1116
 spring.cloud.config.server.git.uri=https://github.com/honghailiang/springhhl/
-spring.cloud.config.server.git.search-paths=spring_cloud_in_action/config-repo
+spring.cloud.config.server.git.search-paths=config-repo
 spring.cloud.config.server.git.username=honghailiang
-spring.cloud.config.server.git.password=255418jtt
+spring.cloud.config.server.git.password=xxxxxx
