--- a/config-client/src/main/resources/bootstrap.properties
+++ b/config-client/src/main/resources/bootstrap.properties
@@ -2,4 +2,6 @@ spring.application.name=configspace
 spring.cloud.config.profile=dev 
 spring.cloud.config.label=master 
 spring.cloud.config.uri=http://localhost:1116/ 
+spring.cloud.config.username=honghailiang
+spring.cloud.config.password=c44adfe1-6593-4e52-bc27-63d8d277e277
 server.port=1117
