--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 #开启actuator的所有端
 management.endpoints.web.exposure.include=*
+
+eureka.client.serviceUrl.defaultZone=http://localhost:1110/eureka/
+
+spring.cloud.config.discovery.enabled=true 
+spring.cloud.config.discovery.serviceid=config-server
