--- a/config-client/src/main/resources/bootstrap.properties
+++ b/config-client/src/main/resources/bootstrap.properties
@@ -1,7 +1,10 @@
 spring.application.name=configspace 
 spring.cloud.config.profile=dev 
 spring.cloud.config.label=master 
-spring.cloud.config.uri=http://localhost:1116/ 
+#spring.cloud.config.uri=http://localhost:1116/
+eureka.client.serviceUrl.defaultZone=http://localhost:1110/eureka/
+spring.cloud.config.discovery.enabled=true 
+spring.cloud.config.discovery.serviceid=config-server
 spring.cloud.config.username=honghailiang
 spring.cloud.config.password=c44adfe1-6593-4e52-bc27-63d8d277e277
 server.port=1117
